--- a/week-3-nodejs/lesson5/package.json
+++ b/week-3-nodejs/lesson5/package.json
@@ -10,6 +10,7 @@
   "author": "Dave Gray",
   "license": "ISC",
   "dependencies": {
+    "date": "^2.0.2",
     "date-fns": "^2.23.0",
     "uuid": "^8.3.2"
   },
