--- a/week-3-nodejs/lesson10/package.json
+++ b/week-3-nodejs/lesson10/package.json
@@ -10,6 +10,7 @@
   "author": "Dave Gray",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "date": "^2.0.2",
     "date-fns": "^2.23.0",
