--- a/week-3-nodejs/lesson12/package.json
+++ b/week-3-nodejs/lesson12/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
